# calibration-supervisor

./: CMakeLists.txt  README.md
.github/workflows/: calibration_supervisor_change.yml  triggering_code.yml
app/: CMakeLists.txt  camera-calibration-dataplayer-app.xml  camera-calibration-gazebo-chessboard-app.xml  camera-calibration-gazebo-random-app.xml  camera-calibration-gazebo-test-img-app.xml  camera-undistortion-gazebo-chessboard-app.xml  create-calibration-test-set.sh  evaluate-calibration.sh  find-best-positions-calibration.sh  modify-params.sh  run-all.sh
app/event-cameras/: camera-calibration-gazebo-test-img-app.xml
app/rgb-cameras/320x240/: camera-calibration-gazebo-test-img-app.xml
app/rgb-cameras/640x480/: camera-calibration-gazebo-test-img-app.xml
camera-calibration-best-pos/: CMakeLists.txt
camera-calibration-best-pos/conf/: iKinGazeCtrl.ini  icubSimEyes.ini
camera-calibration-best-pos/conf/event-cameras/: iKinGazeCtrl.ini  icubSimEyes.ini
camera-calibration-best-pos/conf/event-cameras/304x240/: iKinGazeCtrl.ini  icubSimEyes.ini
camera-calibration-best-pos/conf/rgb-cameras/320x240/: iKinGazeCtrl.ini
cameraSupervision/: CMakeLists.txt  README.md
cameraSupervision/app/: CMakeLists.txt  calibrateAndRun.sh  camera-calibration-gazebo-candidate-pos-app.xml  create-calibration-test-set.sh  evaluate-calibration.sh  evaluate-calibration.xml  find-best-positions-calibration.sh  modify-params.sh  move-chessboard-gazebo.sh  run-all.sh
cameraSupervision/app/rgb-cameras/1024x768/: camera-calibration-gazebo-test-img-app.xml
cameraSupervision/camera-calibration-best-pos/conf/rgb-cameras/1024x768/: iKinGazeCtrl.ini  icubSimEyes.ini
cameraSupervision/camera-calibration-best-pos/conf/rgb-cameras/320x240/: icubSimEyes.ini
cameraSupervision/gazebo/: CMakeLists.txt
cameraSupervision/gazebo/models/chessboard/: model.config
cameraSupervision/gazebo/models/chessboard-tablet/: model.sdf
cameraSupervision/gazebo/models/icub-distorted-camera-1024x768/: model.config  model.urdf
cameraSupervision/gazebo/models/icub-distorted-camera-304x240/: model.config  model.urdf
cameraSupervision/gazebo/models/icub-distorted-camera-320x240/conf/: gazebo_icub_right_distorted_rgb_camera.ini
cameraSupervision/gazebo/models/icub-distorted-camera-640x480/: model.urdf
cameraSupervision/gazebo/models/random/: model.config  model.sdf
cameraSupervision/gazebo/plugin/: CMakeLists.txt  world.cpp
cameraSupervision/gazebo/worlds/camera-calibration-best-pos/event-cameras/304x240/: camera-calibration-chessboard-closer.sdf  camera-calibration-chessboard.sdf
cameraSupervision/gazebo/worlds/camera-calibration-best-pos/rgb-cameras/1024x768/: camera-calibration-chessboard-closer.sdf  camera-calibration-chessboard.sdf  camera-calibration-random.sdf
cameraSupervision/gazebo/worlds/camera-calibration-best-pos/rgb-cameras/320x240/: camera-calibration-chessboard-closer.sdf
cameraSupervision/matlab/: addShiftBoundingBox.m  computeError.m  computeFocal.m  computeFocalPx.m  findBestPositions.m  visualizeBoundingBox.m
cameraSupervision/modules/: CMakeLists.txt
cameraSupervision/modules/calibCamTilt/: CMakeLists.txt  main.cpp
cameraSupervision/modules/calibCamTilt/app/scripts/: calibCamTilt.xml
cameraSupervision/modules/calibEvaluator/: CMakeLists.txt  calibEvaluator.thrift  main.cpp
cameraSupervision/modules/calibEvaluator/app/: CMakeLists.txt
cameraSupervision/modules/calibSupervisor/: CMakeLists.txt  main.cpp
cameraSupervision/modules/calibSupervisor/app/conf/: calibrations_event_304x240.ini  calibrations_rgb_1024x768.ini  calibrations_rgb_320x240.ini  calibrations_rgb_640x480.ini
cameraSupervision/modules/calibSupervisor/app/scripts/: calibSupervisor-event-cam.xml
cameraSupervision/modules/movePattern/: CMakeLists.txt  main.cpp
demoRedBallCalibration/: CMakeLists.txt  README.md
demoRedBallCalibration/app/: CMakeLists.txt  calibrateAndRun.sh  copyParamsRedBall.sh
demoRedBallCalibration/modules/: CMakeLists.txt
demoRedBallCalibration/modules/calibColor/: CMakeLists.txt  calibColor.thrift  calibColor.xml  main.cpp
demoRedBallCalibration/modules/calibColor/app/: CMakeLists.txt
demoRedBallCalibration/modules/calibColor/app/conf/: config.ini
demoRedBallCalibration/modules/calibColor/app/scripts/: calibColor.xml
demoRedBallCalibration/modules/calibOffsets/: CMakeLists.txt  calibOffsets.thrift  calibOffsets.xml  main.cpp
demoRedBallCalibration/modules/calibOffsets/app/: CMakeLists.txt
demoRedBallCalibration/modules/calibOffsets/app/conf/: config.ini
demoRedBallCalibration/modules/calibOffsets/app/scripts/: calibOffesets.xml
gazebo/models/chessboard/: model.sdf
gazebo/models/chessboard-tablet/: model.config
gazebo/models/icub-distorted-camera/: model.config  model.urdf
gazebo/models/icub-distorted-camera-304x240/: model.urdf
gazebo/models/icub-distorted-camera-320x240/: model.config  model.urdf
gazebo/models/icub-distorted-camera-640x480/: model.config
gazebo/plugin/: world.cpp
gazebo/worlds/: camera-calibration-chessboard.sdf
gazebo/worlds/camera-calibration-best-pos/: camera-calibration-chessboard-closer.sdf  camera-calibration-random.sdf
matlab/: findBestPositions.m  visualizeBoundingBox.m
modules/: CMakeLists.txt
modules/calibCamTilt/: calibCamTilt.thrift  calibCamTilt.xml  main.cpp
modules/calibCamTilt/app/conf/: config.ini
modules/calibEvaluator/: CMakeLists.txt  calibEvaluator.thrift  main.cpp
modules/calibEvaluator/app/scripts/: calibEvaluator.xml
modules/calibSupervisor/: CMakeLists.txt  calibSupervisor.thrift  main.cpp
modules/calibSupervisor/app/: CMakeLists.txt
modules/calibSupervisor/app/conf/: calibrations.ini  calibrations_chess.ini  calibrations_event-cameras.ini  calibrations_event-cameras.txt  calibrations_gazebo-test.ini  calibrations_gazebo-testmoving.ini  calibrations_gazebo.ini  config.ini
modules/calibSupervisor/app/scripts/: calibSupervisor-event-cam.xml  calibSupervisor-gazebo.xml  calibSupervisor-rgb-cam.xml  calibSupervisor.xml
modules/movePattern/: CMakeLists.txt  main.cpp
(+12 files in other folders)
