################################################################################
#                                                                              #
# Copyright (C) 2020 Fondazione Istitito Italiano di Tecnologia (IIT)          #
# All Rights Reserved.                                                         #
#                                                                              #
################################################################################

file(GLOB scripts ${CMAKE_SOURCE_DIR}/app/*.sh)
install(PROGRAMS ${scripts} DESTINATION bin)
